# shelfie

./: .env.example  ARCHITECTURE.md  README.md  myreads_recommendation_engine_943a0df3.plan.md  pyproject.toml
src/shelfie/: __init__.py  cli.py  config.py  models.py  storage.py  web.py
src/shelfie/apis/: google_books.py  open_library.py  openai_client.py
src/shelfie/services/: book_lookup.py  reads.py  recommendations.py
src/shelfie/static/: app.js  style.css
src/shelfie/templates/: index.html
