[project]
name = "shelfie"
version = "0.1.0"
description = "Your personal book recommendation engine — powered by your reading history and LLMs"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "tinydb>=4.8.0",
    "chromadb>=0.4.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "pydantic-ai[openai]>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
shelfie = "shelfie.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
